tests/ui/type-alias-impl-trait/normalize-hidden-types.current.stderr
error[E0308]: mismatched types
  --> $DIR/normalize-hidden-types.rs:43:25
   |
LL |     type Opaque = impl Sized;
   |                   ---------- the expected opaque type
...
LL |         let _: Opaque = dyn_hoops::<u8>(0);
   |                ------   ^^^^^^^^^^^^^^^^^^ expected opaque type, found `*const dyn FnOnce(())`
   |                |
   |                expected due to this
   |
   = note: expected opaque type `typeck::Opaque`
              found raw pointer `*const (dyn FnOnce(()) + 'static)`
   = help: consider constraining the associated type `<u8 as Trait>::Gat<'_>` to `()` or calling a method that returns `<u8 as Trait>::Gat<'_>`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
